--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <header>
-    <h1>Don Grizzell, Ph.D.</h1>
+    <h1>Don Grizzell for Congress - CA-12</h1>
     <p>Influencer. Visionary. Going the full 98 yards for YOU.</p>
   </header>
 
